ontol/ontol-compiler/test-cases/error/parser/dependency_error.on
use 'fail' as f

//@ src_name=fail
! // ERROR parse error: expected keyword, found symbol
